...
            .onChange(of: pokemonName, perform: { pokemonSearched in
                viewModel.handleTextChanged(pokemonSearched)
            })
            .textFieldStyle(RoundedBorderTextFieldStyle())
            .border(Color.gray, width: 1)
            .padding()
            .accessibilityLabel("Search pokemon")
    }
}

struct PokemonCard: View {
    var pokemon: PokemonData

...
                            Color.red
                        } else {
                            ProgressView()
                        }
                    }
                    .frame(width: 280, height: 300)
                    .accessibilityIdentifier("PokemonImage")
                    
                    Text(pokemon.name.capitalized)
                        .font(.system(size: 32))
                        .foregroundColor(Color.black)
                        .accessibilityIdentifier("Pokemon name")
                        
...
